changes in css and readme
changed color of the progressbar

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -63,9 +63,9 @@ body {
 }
 
 .progress-bar {
-    background: #d67200;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to left, #d67200, #d67200);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #d67200, #d67200); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
+    background: #08cfb1;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #00ffd9, #00ffd9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to left, #00ffd9, #00ffd9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */	
     width: 0%;
     height: 4vh;
     transition: width 0.3s;
